--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <div class="container">
 
-  This is a test.
+  # This is a test.
+      *Testing markdowns*
     </div>
   </body>
 </html>
